--- a/USTHWeather/app/src/main/res/values/strings.xml
+++ b/USTHWeather/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">USTH Weather</string>
-    <string name="thursday">Thursday</string>
+    <string name="Mon">Mon</string>
+    <string name="info">PartlyCloudy</string>
+    <string name="tempurature">28C-31C</string>
 </resources>
